Bug 1721851 [wpt PR 29748] - [LayoutNG] OOFs and column balancing, a=testonly
Automatic update from web-platform-tests
[LayoutNG] OOFs and column balancing

OOFs should affect column balancing:
https://github.com/w3c/csswg-drafts/issues/6279.

As an initial implementation, this CL allows OOFs to affect the initial
column balancing pass, which won't handle every case, but it should
handle the cases of most interest.

To accomplish this, lay out the OOFs normally inside their containing
block during the initial column balancing pass, allowing the OOF to
affect the initial column block size estimate. In order for the OOF to
also affect the TallestUnbreakableBlockSize(), we needed to set up
the constraint space in this case for fragmentation and propagate
this information to the containing block's builder.

Because OOFs now affect the initial column block size, there ended up
being strange results when an OOF was discovered before a spanner. The
OOF would affect the column block size for the columns before the
spanner, but we would wait to layout the OOF officially until the
multicol had finished layout. Because of this, we ended up adding new
columns after the spanner with a smaller column block size.

To fix this, this CL adds logic to the column layout algorithm to lay
out any OOF descendants when we find a spanner using the newly added
NGOutOfFlowLayoutPart::HandleFragmentation() function. This ensures that
any OOF descendants found before a spanner are actually laid out before
the spanner and take up the block size that they had initially
contributed to. (See the updated unit tests as an example). Note that
this doesn't work for nested fragmentation, and the related unit tests
still result in slightly different behavior than the unnested case.

Bug: 1206618
Change-Id: If21e1cac970289e569be9ab1a79030329732d613
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3018723
Commit-Queue: Alison Maher <almahermicrosoft.com>
Reviewed-by: Morten Stenshorn

--- a/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-069.html
+++ b/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-069.html
@@ -4,6 +4,24 @@ DOCTYPE
 html
 >
 <
+title
+>
+Out
+-
+of
+-
+flow
+positioned
+element
+affects
+column
+balancing
+.
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -68,26 +86,14 @@ xht
 <
 style
 >
-#
+.
 multicol
 {
-columns
-:
-2
-;
-width
-:
-100px
-;
-height
-:
-100px
-;
 column
 -
-fill
+count
 :
-auto
+4
 ;
 column
 -
@@ -95,23 +101,9 @@ gap
 :
 0px
 ;
-background
--
-color
-:
-red
-;
-}
-.
-rel
-{
-height
+width
 :
 100px
-;
-position
-:
-relative
 ;
 }
 .
@@ -121,13 +113,53 @@ position
 :
 absolute
 ;
-width
-:
-50px
-;
 background
+-
+color
 :
 green
+;
+height
+:
+400px
+;
+width
+:
+25px
+;
+}
+#
+target
+{
+background
+-
+color
+:
+red
+;
+position
+:
+relative
+;
+height
+:
+100px
+;
+width
+:
+100px
+;
+top
+:
+-
+100px
+;
+z
+-
+index
+:
+-
+1
 ;
 }
 <
@@ -163,7 +195,7 @@ p
 >
 <
 div
-id
+class
 =
 "
 multicol
@@ -171,10 +203,13 @@ multicol
 >
 <
 div
-class
+style
 =
 "
-rel
+position
+:
+relative
+;
 "
 >
 <
@@ -184,51 +219,26 @@ class
 "
 abs
 "
-style
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
 =
 "
-top
-:
-0px
-;
-height
-:
-160px
-;
+target
 "
->
-<
-/
-div
->
-<
-/
-div
->
-<
-div
-style
-=
-"
-column
--
-span
-:
-all
-;
-height
-:
-20px
-;
-background
-:
-green
-;
-"
->
-<
-/
-div
 >
 <
 /
