--- a/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-071.html
+++ b/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-071.html
@@ -4,6 +4,25 @@ DOCTYPE
 html
 >
 <
+title
+>
+Out
+-
+of
+-
+flow
+positioned
+element
+affects
+nested
+column
+balancing
+.
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -68,20 +87,14 @@ xht
 <
 style
 >
-#
+.
 multicol
 {
-columns
+column
+-
+count
 :
 2
-;
-width
-:
-100px
-;
-height
-:
-100px
 ;
 column
 -
@@ -95,23 +108,21 @@ gap
 :
 0px
 ;
-background
--
-color
-:
-red
-;
 }
-.
-rel
+#
+outer
 {
-height
+width
 :
 100px
 ;
-position
+}
+#
+inner
+{
+width
 :
-relative
+50px
 ;
 }
 .
@@ -121,13 +132,53 @@ position
 :
 absolute
 ;
-width
-:
-50px
-;
 background
+-
+color
 :
 green
+;
+height
+:
+400px
+;
+width
+:
+25px
+;
+}
+#
+target
+{
+background
+-
+color
+:
+red
+;
+position
+:
+relative
+;
+height
+:
+100px
+;
+width
+:
+100px
+;
+top
+:
+-
+100px
+;
+z
+-
+index
+:
+-
+1
 ;
 }
 <
@@ -163,10 +214,15 @@ p
 >
 <
 div
-id
+class
 =
 "
 multicol
+"
+id
+=
+"
+outer
 "
 >
 <
@@ -174,7 +230,23 @@ div
 class
 =
 "
-rel
+multicol
+"
+id
+=
+"
+inner
+"
+>
+<
+div
+style
+=
+"
+position
+:
+relative
+;
 "
 >
 <
@@ -184,51 +256,30 @@ class
 "
 abs
 "
-style
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
 =
 "
-top
-:
-0px
-;
-height
-:
-160px
-;
+target
 "
->
-<
-/
-div
->
-<
-/
-div
->
-<
-div
-style
-=
-"
-column
--
-span
-:
-all
-;
-height
-:
-20px
-;
-background
-:
-green
-;
-"
->
-<
-/
-div
 >
 <
 /
