--- a/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-070.html
+++ b/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-070.html
@@ -4,6 +4,27 @@ DOCTYPE
 html
 >
 <
+title
+>
+Out
+-
+of
+-
+flow
+positioned
+element
+with
+inline
+CB
+affects
+column
+balancing
+.
+<
+/
+title
+>
+<
 link
 rel
 =
@@ -68,26 +89,14 @@ xht
 <
 style
 >
-#
+.
 multicol
 {
-columns
-:
-2
-;
-width
-:
-100px
-;
-height
-:
-100px
-;
 column
 -
-fill
+count
 :
-auto
+4
 ;
 column
 -
@@ -95,23 +104,9 @@ gap
 :
 0px
 ;
-background
--
-color
-:
-red
-;
-}
-.
-rel
-{
-height
+width
 :
 100px
-;
-position
-:
-relative
 ;
 }
 .
@@ -121,13 +116,53 @@ position
 :
 absolute
 ;
-width
-:
-50px
-;
 background
+-
+color
 :
 green
+;
+height
+:
+400px
+;
+width
+:
+25px
+;
+}
+#
+target
+{
+background
+-
+color
+:
+red
+;
+position
+:
+relative
+;
+height
+:
+100px
+;
+width
+:
+100px
+;
+top
+:
+-
+100px
+;
+z
+-
+index
+:
+-
+1
 ;
 }
 <
@@ -163,7 +198,7 @@ p
 >
 <
 div
-id
+class
 =
 "
 multicol
@@ -171,10 +206,16 @@ multicol
 >
 <
 div
-class
+>
+<
+span
+style
 =
 "
-rel
+position
+:
+relative
+;
 "
 >
 <
@@ -184,18 +225,6 @@ class
 "
 abs
 "
-style
-=
-"
-top
-:
-0px
-;
-height
-:
-160px
-;
-"
 >
 <
 /
@@ -203,32 +232,23 @@ div
 >
 <
 /
-div
->
-<
-div
-style
-=
-"
-column
--
 span
-:
-all
-;
-height
-:
-20px
-;
-background
-:
-green
-;
-"
 >
 <
 /
 div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+target
+"
 >
 <
 /
