Bug 1723843 [wpt PR 29888] - [css-flex] Fix indefiniteness for a nested image column item., a=testonly
Automatic update from web-platform-tests
[css-flex] Fix indefiniteness for a nested image column item.

This is effectively a revert of:
https://chromium-review.googlesource.com/c/chromium/src/+/2878647

As was not web-compatible.

Bug: 1233330
Change-Id: Ifa617009c974a4a421eee002372cc862b29ac88d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3066458
Reviewed-by: David Grogan <dgroganchromium.org>
Commit-Queue: Ian Kilpatrick <ikilpatrickchromium.org>
Cr-Commit-Position: refs/heads/master{#908220}

--

wpt-commits: fcbb95fbbb1d554bc29e034a0f7fb680ce796abd
wpt-pr: 29888

UltraBlame original commit: b7f3c0084e5f45b84d00fc761642f88e516121b2

--- a/testing/web-platform/tests/css/css-flexbox/image-nested-within-definite-column-flexbox.html
+++ b/testing/web-platform/tests/css/css-flexbox/image-nested-within-definite-column-flexbox.html
@@ -17,21 +17,23 @@ https
 :
 /
 /
-github
+bugs
 .
-com
+chromium
+.
+org
 /
-web
--
-platform
--
-tests
+p
 /
-wpt
+chromium
 /
 issues
 /
-28805
+detail
+?
+id
+=
+1233330
 "
 >
 <
@@ -86,6 +88,20 @@ div
 style
 =
 "
+background
+:
+green
+;
+height
+:
+100px
+;
+width
+:
+min
+-
+content
+;
 display
 :
 flex
@@ -96,20 +112,6 @@ direction
 :
 column
 ;
-height
-:
-100px
-;
-width
-:
-max
--
-content
-;
-background
-:
-green
-;
 "
 >
 <
@@ -117,40 +119,26 @@ div
 style
 =
 "
-display
-:
-flex
-;
 height
 :
-50px
-;
-flex
-:
-1
-;
-width
-:
-max
--
-content
-;
-min
--
-width
-:
-0
-;
-min
--
-height
-:
-0
+100
+%
 ;
 "
 >
 <
 img
+style
+=
+"
+min
+-
+height
+:
+100
+%
+;
+"
 src
 =
 "
@@ -183,12 +171,12 @@ svg
 width
 =
 '
-100px
+1px
 '
 height
 =
 '
-100px
+1px
 '
 >
 <
