Bug 1723809 [wpt PR 29883] - Make <base, <basefont>, and <embed> display:none, a=testonly
Automatic update from web-platform-tests
Make <base, <basefont>, and <embed> display:none

The spec [1] calls for these tags (along with several others) to
be display:none. Previously, these three (plus <area> - see below) were
missing from html.css. With this CL, I've updated html.css to more-
closely match the spec text. I also slightly changed the pre-
existing test to check for display:none only, and not display:inline
for <source> and <track>, because I could not find an explicit spec
for that. If I'm wrong about that, someone please point me to the spec
for those and I'll put the test back.

This CL leaves <area> unchanged for now, as it appears to break
hit-testing of <area> elements. This works, somehow, in WebKit,
while still having <area> elements display:none. TBD.

[1] https://html.spec.whatwg.org/multipage/rendering.html#hidden-elements

Bug: 1231263
Change-Id: Id67eed8a05a59174921b82783ced7958af8ff169
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3050793
Commit-Queue: Mason Freed <masonfchromium.org>
Auto-Submit: Mason Freed <masonfchromium.org>
Reviewed-by: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/master{#908313}

--

wpt-commits: 7f84d2bfe8bc5f55e8fa4c9e05a7184e1bffc12a
wpt-pr: 29883

UltraBlame original commit: 9b40fa337953c9242f946b990f2e9a32d7e3ace9

--- a/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
+++ b/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
@@ -137,6 +137,27 @@ title
 "
 ]
 ;
+function
+isDisplayNone
+(
+element
+)
+{
+return
+getComputedStyle
+(
+element
+)
+.
+display
+=
+=
+=
+"
+none
+"
+;
+}
 for
 (
 let
@@ -170,17 +191,12 @@ appendChild
 element
 )
 ;
-assert_equals
+assert_false
 (
-getComputedStyle
+isDisplayNone
 (
 element
 )
-.
-display
-"
-inline
-"
 )
 ;
 }
@@ -190,7 +206,9 @@ name
 should
 not
 be
-hidden
+display
+:
+none
 )
 ;
 }
@@ -227,17 +245,12 @@ appendChild
 element
 )
 ;
-assert_equals
+assert_true
 (
-getComputedStyle
+isDisplayNone
 (
 element
 )
-.
-display
-"
-none
-"
 )
 ;
 }
@@ -246,7 +259,9 @@ name
 }
 should
 be
-hidden
+display
+:
+none
 )
 ;
 }
@@ -256,9 +271,9 @@ function
 (
 )
 {
-assert_equals
+assert_true
 (
-getComputedStyle
+isDisplayNone
 (
 document
 .
@@ -271,11 +286,6 @@ hidden
 "
 )
 )
-.
-display
-"
-none
-"
 )
 ;
 }
@@ -285,7 +295,9 @@ hidden
 element
 should
 be
-hidden
+display
+:
+none
 )
 ;
 <
