Bug 1723827 [wpt PR 29885] - Minor fixing to WPT css/css-fonts/fallback-remote-to-data-url.html, a=testonly
Automatic update from web-platform-tests
Minor fixing to WPT css/css-fonts/fallback-remote-to-data-url.html

1. The font style is also applied to element non-target so that we can
   verify the effect of unicode-range on data-font

2. Added 'font-display: swap' to remote-font so that we can observe the
   fallback when loading remote-font

Bug: 897539
Change-Id: I9bbe0705bc7d3a9ebbaf92f2c8c26c557adec24a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3069529
Commit-Queue: Xiaocheng Hu <xiaochenghchromium.org>
Auto-Submit: Xiaocheng Hu <xiaochenghchromium.org>
Reviewed-by: Dominik Röttsches <drottchromium.org>
Cr-Commit-Position: refs/heads/master{#908594}

--

wpt-commits: ddaa08bb676adb2b173f85bf2dd88dcfb8e103e5
wpt-pr: 29885

UltraBlame original commit: b06104b17e3573b334558d837ad9ee04068be6fb

--- a/testing/web-platform/tests/css/css-fonts/fallback-remote-to-data-url.html
+++ b/testing/web-platform/tests/css/css-fonts/fallback-remote-to-data-url.html
@@ -429,9 +429,19 @@ woff
 '
 )
 ;
+font
+-
+display
+:
+swap
+;
 }
 #
 target
+#
+not
+-
+covered
 {
 font
 :
@@ -469,9 +479,9 @@ span
 id
 =
 "
-non
+not
 -
-target
+covered
 "
 >
 ABCDEFGHIJ
@@ -573,9 +583,9 @@ document
 getElementById
 (
 '
-non
+not
 -
-target
+covered
 '
 )
 .
