Bug 1723030 [wpt PR 29845] - Add 'custom' value to prefers-contrast media query, a=testonly
Automatic update from web-platform-tests
Add 'custom' value to prefers-contrast media query

As indicated in the spec, we are implementing the 'custom' value for
the prefers-contrast media query. This value corresponds to forced
colors that are neither high nor low contrast.

Spec: https://drafts.csswg.org/mediaqueries-5/#prefers-contrast

Bug: 1107431
Change-Id: I3af0a1965fbe57aaab2665c3c502f9b7555d2252
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3061066
Reviewed-by: Chris Palmer <palmerchromium.org>
Reviewed-by: Alison Maher <almahermicrosoft.com>
Reviewed-by: Peter Kasting <pkastingchromium.org>
Commit-Queue: Sara Tang <sartangmicrosoft.com>
Cr-Commit-Position: refs/heads/master{#908632}

--

wpt-commits: 3790190e4421816fd4b334b1131a6a4f435c8e17
wpt-pr: 29845

UltraBlame original commit: 53f3da7c95c70809323a71fcf0114b70a00f0b90

--- a/testing/web-platform/tests/css/mediaqueries/prefers-contrast.html
+++ b/testing/web-platform/tests/css/mediaqueries/prefers-contrast.html
@@ -162,6 +162,19 @@ less
 "
 )
 ;
+query_should_be_css_parseable
+(
+"
+(
+prefers
+-
+contrast
+:
+custom
+)
+"
+)
+;
 query_should_not_be_css_parseable
 (
 "
@@ -342,6 +355,19 @@ prefers
 contrast
 :
 less
+)
+"
+)
+;
+query_should_be_js_parseable
+(
+"
+(
+prefers
+-
+contrast
+:
+custom
 )
 "
 )
