--- a/testing/web-platform/tests/css/css-contain/parsing/contain-invalid.html
+++ b/testing/web-platform/tests/css/css-contain/parsing/contain-invalid.html
@@ -186,6 +186,96 @@ test_invalid_value
 contain
 "
 "
+layout
+layout
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+strict
+layout
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+paint
+strict
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+paint
+layout
+style
+paint
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+none
+none
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+none
+strict
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+strict
+strict
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
+strict
+none
+"
+)
+;
+test_invalid_value
+(
+"
+contain
+"
+"
 strict
 content
 "
