Bug 1724171 [wpt PR 29910] - [css-contain] Remove paint-containment-with-fixed-position.html, a=testonly
Automatic update from web-platform-tests
[css-contain] Remove paint-containment-with-fixed-position.html

Remove paint-containment-with-fixed-position.html since
contain-paint-010.html is a similar test, it just needs to
also test inline.

Change-Id: Iaa3f7fe7fc830b4f7f53d4f41af5983bab69f29d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3071279
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Commit-Queue: Rob Buis <rbuisigalia.com>
Cr-Commit-Position: refs/heads/master{#908827}

--

wpt-commits: 3fb14d74ca0731c860d70c396041569e8cfd8b71
wpt-pr: 29910

UltraBlame original commit: 652dc8e32892563cf8a7bcdb28d3821acb59096c

--- a/testing/web-platform/tests/css/css-contain/contain-paint-010.html
+++ b/testing/web-platform/tests/css/css-contain/contain-paint-010.html
@@ -157,7 +157,7 @@ width
 ;
 height
 :
-100px
+50px
 ;
 background
 :
@@ -189,7 +189,7 @@ width
 ;
 height
 :
-100px
+50px
 ;
 }
 <
@@ -231,6 +231,41 @@ id
 contain
 -
 paint
+"
+>
+<
+div
+id
+=
+"
+fixed
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+contain
+-
+paint
+"
+style
+=
+"
+display
+:
+inline
+-
+block
 "
 >
 <
