Bug 1675410 - Update S3TC/BPTC/RGTC w/h restrictions. r=gfx-reviewers,lsalzman
Tracks spec+test updates here:
https://github.com/KhronosGroup/WebGL/pull/3304

Differential Revision: https://phabricator.services.mozilla.com/D121581

UltraBlame original commit: d0750d3f979a64d88574e3f7459d96ffdfa4c1ad

--- a/dom/canvas/test/webgl-conf/checkout/conformance/extensions/webgl-compressed-texture-s3tc-srgb.html
+++ b/dom/canvas/test/webgl-conf/checkout/conformance/extensions/webgl-compressed-texture-s3tc-srgb.html
@@ -4332,14 +4332,13 @@ glErrorShouldBe
 gl
 gl
 .
-NO_ERROR
+INVALID_OPERATION
 "
-valid
+invalid
 dimensions
 for
 level
->
-0
+1
 "
 )
 ;
@@ -4407,14 +4406,13 @@ glErrorShouldBe
 gl
 gl
 .
-NO_ERROR
+INVALID_OPERATION
 "
-valid
+invalid
 dimensions
 for
 level
->
-0
+1
 "
 )
 ;
