--- a/dom/canvas/test/webgl-conf/checkout/conformance/extensions/webgl-compressed-texture-s3tc.html
+++ b/dom/canvas/test/webgl-conf/checkout/conformance/extensions/webgl-compressed-texture-s3tc.html
@@ -4287,14 +4287,13 @@ glErrorShouldBe
 gl
 gl
 .
-NO_ERROR
+INVALID_OPERATION
 "
-valid
+invalid
 dimensions
 for
 level
->
-0
+1
 "
 )
 ;
@@ -4362,14 +4361,13 @@ glErrorShouldBe
 gl
 gl
 .
-NO_ERROR
+INVALID_OPERATION
 "
-valid
+invalid
 dimensions
 for
 level
->
-0
+1
 "
 )
 ;
