Bug 1724412 - Apply pref for dragexit test r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D122021

UltraBlame original commit: da8a048e01a7a863c7f8cf5359da75844f104f69

--- a/dom/events/test/test_bug1635018.html
+++ b/dom/events/test/test_bug1635018.html
@@ -140,6 +140,37 @@ waitForExplicitFinish
 (
 )
 ;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+event
+.
+dragexit
+.
+enabled
+"
+false
+]
+]
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
 start
 .
 addEventListener
@@ -219,6 +250,9 @@ dragover
 "
 }
 dest
+)
+;
+}
 )
 ;
 <
