Bug 1283388 - Implement datetime-local UI. r=Gijs
This only shows the date picker for now (matches Safari). Seems fine
since we don't enable the time picker by default.

Differential Revision: https://phabricator.services.mozilla.com/D113116

UltraBlame original commit: 8aef29efdec24dc1356af56a3f3e0774be4668cf

--- a/dom/html/test/forms/test_input_datetime_focus_blur.html
+++ b/dom/html/test/forms/test_input_datetime_focus_blur.html
@@ -188,6 +188,23 @@ date
 "
 >
 <
+input
+id
+=
+"
+input_datetime
+-
+local
+"
+type
+=
+"
+datetime
+-
+local
+"
+>
+<
 /
 div
 >
@@ -511,9 +528,11 @@ test
 (
 )
 {
+for
+(
 let
-inputTypes
-=
+inputType
+of
 [
 "
 time
@@ -521,32 +540,17 @@ time
 "
 date
 "
+"
+datetime
+-
+local
+"
 ]
-;
-for
-(
-let
-i
-=
-0
-;
-i
-<
-inputTypes
-.
-length
-;
-i
-+
-+
 )
 {
 testFocusBlur
 (
-inputTypes
-[
-i
-]
+inputType
 )
 ;
 }
