--- a/dom/html/test/forms/test_input_datetime_focus_blur_events.html
+++ b/dom/html/test/forms/test_input_datetime_focus_blur_events.html
@@ -280,6 +280,63 @@ focusOutEvents
 "
 >
 <
+input
+type
+=
+"
+datetime
+-
+local
+"
+id
+=
+"
+input_datetime
+-
+local
+"
+onfocus
+=
+"
++
++
+focusEvents
+[
+2
+]
+"
+onblur
+=
+"
++
++
+blurEvents
+[
+2
+]
+"
+onfocusin
+=
+"
++
++
+focusInEvents
+[
+2
+]
+"
+onfocusout
+=
+"
++
++
+focusOutEvents
+[
+2
+]
+"
+>
+<
 /
 div
 >
@@ -360,12 +417,18 @@ time
 "
 date
 "
+"
+datetime
+-
+local
+"
 ]
 ;
 var
 focusEvents
 =
 [
+0
 0
 0
 ]
@@ -376,6 +439,7 @@ focusInEvents
 [
 0
 0
+0
 ]
 ;
 var
@@ -384,12 +448,14 @@ focusOutEvents
 [
 0
 0
+0
 ]
 ;
 var
 blurEvents
 =
 [
+0
 0
 0
 ]
