--- a/dom/html/test/forms/test_input_datetime_input_change_events.html
+++ b/dom/html/test/forms/test_input_datetime_input_change_events.html
@@ -240,6 +240,43 @@ inputEvents
 "
 >
 <
+input
+type
+=
+"
+datetime
+-
+local
+"
+id
+=
+"
+input_datetime
+-
+local
+"
+onchange
+=
+"
++
++
+changeEvents
+[
+2
+]
+"
+oninput
+=
+"
++
++
+inputEvents
+[
+2
+]
+"
+>
+<
 /
 div
 >
@@ -257,13 +294,6 @@ class
 =
 "
 testbody
-"
-type
-=
-"
-text
-/
-javascript
 "
 >
 /
@@ -323,6 +353,11 @@ time
 "
 date
 "
+"
+datetime
+-
+local
+"
 ]
 ;
 var
@@ -331,12 +366,14 @@ changeEvents
 [
 0
 0
+0
 ]
 ;
 var
 inputEvents
 =
 [
+0
 0
 0
 ]
@@ -356,6 +393,15 @@ values
 06
 -
 08
+"
+"
+2017
+-
+06
+-
+08T10
+:
+30
 "
 ]
 ;
@@ -389,6 +435,26 @@ expectedValues
 01
 -
 08
+"
+]
+[
+"
+2017
+-
+05
+-
+08T10
+:
+30
+"
+"
+2017
+-
+01
+-
+08T10
+:
+30
 "
 ]
 ]
