--- a/dom/html/test/forms/test_input_datetime_reset_button.html
+++ b/dom/html/test/forms/test_input_datetime_reset_button.html
@@ -220,6 +220,34 @@ input
 type
 =
 "
+datetime
+-
+local
+"
+id
+=
+"
+id_datetime
+-
+local
+"
+value
+=
+"
+2017
+-
+06
+-
+08T10
+:
+30
+"
+>
+<
+input
+type
+=
+"
 date
 "
 id
@@ -254,6 +282,35 @@ value
 =
 "
 10
+:
+30
+"
+required
+>
+<
+input
+type
+=
+"
+datetime
+-
+local
+"
+id
+=
+"
+id_datetime
+-
+local_required
+"
+value
+=
+"
+2017
+-
+06
+-
+08T10
 :
 30
 "
@@ -308,6 +365,35 @@ input
 type
 =
 "
+datetime
+-
+local
+"
+id
+=
+"
+id_datetime
+-
+local_readonly
+"
+value
+=
+"
+2017
+-
+06
+-
+08T10
+:
+30
+"
+readonly
+>
+<
+input
+type
+=
+"
 date
 "
 id
@@ -342,6 +428,35 @@ value
 =
 "
 10
+:
+30
+"
+disabled
+>
+<
+input
+type
+=
+"
+datetime
+-
+local
+"
+id
+=
+"
+id_datetime
+-
+local_disabled
+"
+value
+=
+"
+2017
+-
+06
+-
+08T10
 :
 30
 "
@@ -384,6 +499,51 @@ navigator
 userAgent
 )
 ;
+const
+kTypes
+=
+[
+"
+date
+"
+"
+time
+"
+"
+datetime
+-
+local
+"
+]
+;
+function
+id_for_type
+(
+type
+kind
+)
+{
+return
+"
+id_
+"
++
+type
++
+(
+kind
+?
+"
+_
+"
++
+kind
+:
+"
+"
+)
+;
+}
 SimpleTest
 .
 waitForExplicitFinish
@@ -432,31 +592,16 @@ finish
 Initial
 load
 .
-assert_reset_visible
+assert_reset_visible_all
 (
 "
-id_date
 "
 )
 ;
-assert_reset_visible
+assert_reset_hidden_all
 (
 "
-id_time
-"
-)
-;
-assert_reset_hidden
-(
-"
-id_date_required
-"
-)
-;
-assert_reset_hidden
-(
-"
-id_time_required
+required
 "
 )
 ;
@@ -468,57 +613,22 @@ toggling
 test_make_required
 (
 "
-id_date
-"
-)
-;
-test_make_required
-(
-"
-id_time
 "
 )
 ;
 test_make_optional
 (
 "
-id_date_required
-"
-)
-;
-test_make_optional
-(
-"
-id_time_required
+required
 "
 )
 ;
 test_readonly_field_disabled
 (
-"
-date
-"
-)
-;
-test_readonly_field_disabled
-(
-"
-time
-"
 )
 ;
 test_disabled_field_disabled
 (
-"
-date
-"
-)
-;
-test_disabled_field_disabled
-(
-"
-time
-"
 )
 ;
 /
@@ -592,33 +702,14 @@ undisplayed
 test_make_required
 (
 "
-id_date_required
+required
 "
-true
-)
-;
-test_make_required
-(
-"
-id_time_required
-"
-true
 )
 ;
 test_make_optional
 (
 "
-id_date
 "
-true
-)
-;
-test_make_optional
-(
-"
-id_time
-"
-true
 )
 ;
 /
@@ -632,30 +723,10 @@ well
 .
 test_readonly_field_disabled
 (
-"
-date
-"
-)
-;
-test_readonly_field_disabled
-(
-"
-time
-"
 )
 ;
 test_disabled_field_disabled
 (
-"
-date
-"
-)
-;
-test_disabled_field_disabled
-(
-"
-time
-"
 )
 ;
 SimpleTest
@@ -670,21 +741,26 @@ finish
 function
 test_disabled_field_disabled
 (
+)
+{
+for
+(
+let
 type
+of
+kTypes
 )
 {
 const
 id
 =
-"
-id_
-"
-+
+id_for_type
+(
 type
-+
 "
-_disabled
+disabled
 "
+)
 ;
 const
 input
@@ -791,24 +867,30 @@ original
 state
 .
 }
+}
 function
 test_readonly_field_disabled
 (
+)
+{
+for
+(
+let
 type
+of
+kTypes
 )
 {
 const
 id
 =
-"
-id_
-"
-+
+id_for_type
+(
 type
-+
 "
-_readonly
+readonly
 "
+)
 ;
 const
 input
@@ -922,12 +1004,30 @@ original
 state
 .
 }
+}
 function
 test_make_required
 (
-id
+kind
 )
 {
+for
+(
+let
+type
+of
+kTypes
+)
+{
+const
+id
+=
+id_for_type
+(
+type
+kind
+)
+;
 const
 input
 =
@@ -967,12 +1067,30 @@ id
 )
 ;
 }
+}
 function
 test_make_optional
 (
-id
+kind
 )
 {
+for
+(
+let
+type
+of
+kTypes
+)
+{
+const
+id
+=
+id_for_type
+(
+type
+kind
+)
+;
 const
 input
 =
@@ -1012,6 +1130,32 @@ id
 )
 ;
 }
+}
+function
+assert_reset_visible_all
+(
+kind
+)
+{
+for
+(
+let
+type
+of
+kTypes
+)
+{
+assert_reset_visible
+(
+id_for_type
+(
+type
+kind
+)
+)
+;
+}
+}
 function
 assert_reset_visible
 (
@@ -1046,6 +1190,31 @@ id
 }
 )
 ;
+}
+function
+assert_reset_hidden_all
+(
+kind
+)
+{
+for
+(
+let
+type
+of
+kTypes
+)
+{
+assert_reset_hidden
+(
+id_for_type
+(
+type
+kind
+)
+)
+;
+}
 }
 function
 assert_reset_hidden
