--- a/dom/html/test/forms/test_input_datetime_tabindex.html
+++ b/dom/html/test/forms/test_input_datetime_tabindex.html
@@ -289,6 +289,73 @@ tabindex
 "
 >
 <
+input
+id
+=
+"
+datetime
+-
+local1
+"
+type
+=
+"
+datetime
+-
+local
+"
+tabindex
+=
+"
+0
+"
+>
+<
+input
+id
+=
+"
+datetime
+-
+local2
+"
+type
+=
+"
+datetime
+-
+local
+"
+tabindex
+=
+"
+-
+1
+"
+>
+<
+input
+id
+=
+"
+datetime
+-
+local3
+"
+type
+=
+"
+datetime
+-
+local
+"
+tabindex
+=
+"
+0
+"
+>
+<
 /
 div
 >
@@ -496,13 +563,47 @@ focusable
 "
 )
 ;
+let
+fieldCount
+=
+type
+=
+=
+"
+datetime
+-
+local
+"
+?
+6
+:
+3
+;
 /
 /
 Advance
-to
-next
+through
 inner
-field
+fields
+.
+for
+(
+let
+i
+=
+0
+;
+i
+<
+fieldCount
+-
+1
+;
++
++
+i
+)
+{
 synthesizeKey
 (
 "
@@ -528,38 +629,7 @@ tabbable
 "
 )
 ;
-/
-/
-Advance
-to
-next
-inner
-field
-synthesizeKey
-(
-"
-KEY_Tab
-"
-)
-;
-is
-(
-document
-.
-activeElement
-input1
-"
-input
-element
-with
-tabindex
-=
-0
-is
-tabbable
-"
-)
-;
+}
 /
 /
 Advance
@@ -711,9 +781,11 @@ test
 (
 )
 {
+for
+(
 let
-inputTypes
-=
+inputType
+of
 [
 "
 time
@@ -721,32 +793,17 @@ time
 "
 date
 "
+"
+datetime
+-
+local
+"
 ]
-;
-for
-(
-let
-i
-=
-0
-;
-i
-<
-inputTypes
-.
-length
-;
-i
-+
-+
 )
 {
 testTabindex
 (
-inputTypes
-[
-i
-]
+inputType
 )
 ;
 }
