Backed out changeset 8aef29efdec2 (bug 1283388) for causing failures in test_MozEditableElement_setUserInput.html. CLOSED TREE
UltraBlame original commit: 6f71100cb98ada8eefd9d5bd175543635e85be47

--- a/dom/html/test/forms/test_input_datetime_focus_blur.html
+++ b/dom/html/test/forms/test_input_datetime_focus_blur.html
@@ -188,23 +188,6 @@ date
 "
 >
 <
-input
-id
-=
-"
-input_datetime
--
-local
-"
-type
-=
-"
-datetime
--
-local
-"
->
-<
 /
 div
 >
@@ -528,11 +511,9 @@ test
 (
 )
 {
-for
-(
 let
-inputType
-of
+inputTypes
+=
 [
 "
 time
@@ -540,17 +521,32 @@ time
 "
 date
 "
-"
-datetime
--
-local
-"
 ]
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+inputTypes
+.
+length
+;
+i
++
++
 )
 {
 testFocusBlur
 (
-inputType
+inputTypes
+[
+i
+]
 )
 ;
 }
