--- a/dom/html/test/forms/test_input_datetime_reset_button.html
+++ b/dom/html/test/forms/test_input_datetime_reset_button.html
@@ -220,34 +220,6 @@ input
 type
 =
 "
-datetime
--
-local
-"
-id
-=
-"
-id_datetime
--
-local
-"
-value
-=
-"
-2017
--
-06
--
-08T10
-:
-30
-"
->
-<
-input
-type
-=
-"
 date
 "
 id
@@ -282,35 +254,6 @@ value
 =
 "
 10
-:
-30
-"
-required
->
-<
-input
-type
-=
-"
-datetime
--
-local
-"
-id
-=
-"
-id_datetime
--
-local_required
-"
-value
-=
-"
-2017
--
-06
--
-08T10
 :
 30
 "
@@ -365,35 +308,6 @@ input
 type
 =
 "
-datetime
--
-local
-"
-id
-=
-"
-id_datetime
--
-local_readonly
-"
-value
-=
-"
-2017
--
-06
--
-08T10
-:
-30
-"
-readonly
->
-<
-input
-type
-=
-"
 date
 "
 id
@@ -428,35 +342,6 @@ value
 =
 "
 10
-:
-30
-"
-disabled
->
-<
-input
-type
-=
-"
-datetime
--
-local
-"
-id
-=
-"
-id_datetime
--
-local_disabled
-"
-value
-=
-"
-2017
--
-06
--
-08T10
 :
 30
 "
@@ -499,51 +384,6 @@ navigator
 userAgent
 )
 ;
-const
-kTypes
-=
-[
-"
-date
-"
-"
-time
-"
-"
-datetime
--
-local
-"
-]
-;
-function
-id_for_type
-(
-type
-kind
-)
-{
-return
-"
-id_
-"
-+
-type
-+
-(
-kind
-?
-"
-_
-"
-+
-kind
-:
-"
-"
-)
-;
-}
 SimpleTest
 .
 waitForExplicitFinish
@@ -592,16 +432,31 @@ finish
 Initial
 load
 .
-assert_reset_visible_all
+assert_reset_visible
 (
 "
+id_date
 "
 )
 ;
-assert_reset_hidden_all
+assert_reset_visible
 (
 "
-required
+id_time
+"
+)
+;
+assert_reset_hidden
+(
+"
+id_date_required
+"
+)
+;
+assert_reset_hidden
+(
+"
+id_time_required
 "
 )
 ;
@@ -613,22 +468,57 @@ toggling
 test_make_required
 (
 "
+id_date
+"
+)
+;
+test_make_required
+(
+"
+id_time
 "
 )
 ;
 test_make_optional
 (
 "
-required
+id_date_required
+"
+)
+;
+test_make_optional
+(
+"
+id_time_required
 "
 )
 ;
 test_readonly_field_disabled
 (
+"
+date
+"
+)
+;
+test_readonly_field_disabled
+(
+"
+time
+"
 )
 ;
 test_disabled_field_disabled
 (
+"
+date
+"
+)
+;
+test_disabled_field_disabled
+(
+"
+time
+"
 )
 ;
 /
@@ -702,14 +592,33 @@ undisplayed
 test_make_required
 (
 "
-required
+id_date_required
 "
+true
+)
+;
+test_make_required
+(
+"
+id_time_required
+"
+true
 )
 ;
 test_make_optional
 (
 "
+id_date
 "
+true
+)
+;
+test_make_optional
+(
+"
+id_time
+"
+true
 )
 ;
 /
@@ -723,10 +632,30 @@ well
 .
 test_readonly_field_disabled
 (
+"
+date
+"
+)
+;
+test_readonly_field_disabled
+(
+"
+time
+"
 )
 ;
 test_disabled_field_disabled
 (
+"
+date
+"
+)
+;
+test_disabled_field_disabled
+(
+"
+time
+"
 )
 ;
 SimpleTest
@@ -741,26 +670,21 @@ finish
 function
 test_disabled_field_disabled
 (
-)
-{
-for
-(
-let
 type
-of
-kTypes
 )
 {
 const
 id
 =
-id_for_type
-(
+"
+id_
+"
++
 type
++
 "
-disabled
+_disabled
 "
-)
 ;
 const
 input
@@ -867,30 +791,24 @@ original
 state
 .
 }
-}
 function
 test_readonly_field_disabled
 (
-)
-{
-for
-(
-let
 type
-of
-kTypes
 )
 {
 const
 id
 =
-id_for_type
-(
+"
+id_
+"
++
 type
++
 "
-readonly
+_readonly
 "
-)
 ;
 const
 input
@@ -1004,30 +922,12 @@ original
 state
 .
 }
-}
 function
 test_make_required
 (
-kind
-)
-{
-for
-(
-let
-type
-of
-kTypes
-)
-{
-const
 id
-=
-id_for_type
-(
-type
-kind
 )
-;
+{
 const
 input
 =
@@ -1067,30 +967,12 @@ id
 )
 ;
 }
-}
 function
 test_make_optional
 (
-kind
-)
-{
-for
-(
-let
-type
-of
-kTypes
-)
-{
-const
 id
-=
-id_for_type
-(
-type
-kind
 )
-;
+{
 const
 input
 =
@@ -1130,32 +1012,6 @@ id
 )
 ;
 }
-}
-function
-assert_reset_visible_all
-(
-kind
-)
-{
-for
-(
-let
-type
-of
-kTypes
-)
-{
-assert_reset_visible
-(
-id_for_type
-(
-type
-kind
-)
-)
-;
-}
-}
 function
 assert_reset_visible
 (
@@ -1190,31 +1046,6 @@ id
 }
 )
 ;
-}
-function
-assert_reset_hidden_all
-(
-kind
-)
-{
-for
-(
-let
-type
-of
-kTypes
-)
-{
-assert_reset_hidden
-(
-id_for_type
-(
-type
-kind
-)
-)
-;
-}
 }
 function
 assert_reset_hidden
