--- a/dom/html/test/forms/test_input_datetime_tabindex.html
+++ b/dom/html/test/forms/test_input_datetime_tabindex.html
@@ -289,73 +289,6 @@ tabindex
 "
 >
 <
-input
-id
-=
-"
-datetime
--
-local1
-"
-type
-=
-"
-datetime
--
-local
-"
-tabindex
-=
-"
-0
-"
->
-<
-input
-id
-=
-"
-datetime
--
-local2
-"
-type
-=
-"
-datetime
--
-local
-"
-tabindex
-=
-"
--
-1
-"
->
-<
-input
-id
-=
-"
-datetime
--
-local3
-"
-type
-=
-"
-datetime
--
-local
-"
-tabindex
-=
-"
-0
-"
->
-<
 /
 div
 >
@@ -563,47 +496,13 @@ focusable
 "
 )
 ;
-let
-fieldCount
-=
-type
-=
-=
-"
-datetime
--
-local
-"
-?
-6
-:
-3
-;
 /
 /
 Advance
-through
+to
+next
 inner
-fields
-.
-for
-(
-let
-i
-=
-0
-;
-i
-<
-fieldCount
--
-1
-;
-+
-+
-i
-)
-{
+field
 synthesizeKey
 (
 "
@@ -629,7 +528,38 @@ tabbable
 "
 )
 ;
-}
+/
+/
+Advance
+to
+next
+inner
+field
+synthesizeKey
+(
+"
+KEY_Tab
+"
+)
+;
+is
+(
+document
+.
+activeElement
+input1
+"
+input
+element
+with
+tabindex
+=
+0
+is
+tabbable
+"
+)
+;
 /
 /
 Advance
@@ -781,11 +711,9 @@ test
 (
 )
 {
-for
-(
 let
-inputType
-of
+inputTypes
+=
 [
 "
 time
@@ -793,17 +721,32 @@ time
 "
 date
 "
-"
-datetime
--
-local
-"
 ]
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+inputTypes
+.
+length
+;
+i
++
++
 )
 {
 testTabindex
 (
-inputType
+inputTypes
+[
+i
+]
 )
 ;
 }
