--- a/dom/html/test/forms/test_input_datetime_input_change_events.html
+++ b/dom/html/test/forms/test_input_datetime_input_change_events.html
@@ -240,43 +240,6 @@ inputEvents
 "
 >
 <
-input
-type
-=
-"
-datetime
--
-local
-"
-id
-=
-"
-input_datetime
--
-local
-"
-onchange
-=
-"
-+
-+
-changeEvents
-[
-2
-]
-"
-oninput
-=
-"
-+
-+
-inputEvents
-[
-2
-]
-"
->
-<
 /
 div
 >
@@ -294,6 +257,13 @@ class
 =
 "
 testbody
+"
+type
+=
+"
+text
+/
+javascript
 "
 >
 /
@@ -353,11 +323,6 @@ time
 "
 date
 "
-"
-datetime
--
-local
-"
 ]
 ;
 var
@@ -366,14 +331,12 @@ changeEvents
 [
 0
 0
-0
 ]
 ;
 var
 inputEvents
 =
 [
-0
 0
 0
 ]
@@ -393,15 +356,6 @@ values
 06
 -
 08
-"
-"
-2017
--
-06
--
-08T10
-:
-30
 "
 ]
 ;
@@ -435,26 +389,6 @@ expectedValues
 01
 -
 08
-"
-]
-[
-"
-2017
--
-05
--
-08T10
-:
-30
-"
-"
-2017
--
-01
--
-08T10
-:
-30
 "
 ]
 ]
