Bug 1678771. Add test. r=hiro
We implement a new nsIDOMWindowUtils function sendNativeTouchpadPan to do this. It is only implemented on Windows here.

Depends on D122048

Differential Revision: https://phabricator.services.mozilla.com/D122049

UltraBlame original commit: 8dc4ef909cecb70530b51dd1d8754ea140bc905c

--- a/gfx/layers/apz/test/mochitest/test_group_wheelevents.html
+++ b/gfx/layers/apz/test/mochitest/test_group_wheelevents.html
@@ -77,6 +77,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+apz_test_native_event_utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -522,6 +543,54 @@ prefs
 }
 ]
 ;
+/
+/
+Only
+Windows
+has
+the
+test
+api
+implemented
+for
+this
+test
+.
+if
+(
+getPlatform
+(
+)
+=
+=
+"
+windows
+"
+)
+{
+subtests
+.
+push
+(
+{
+"
+file
+"
+:
+"
+helper_dommousescroll
+.
+html
+"
+"
+prefs
+"
+:
+prefs
+}
+)
+;
+}
 if
 (
 isApzEnabled
