Bug 1283388 - Implement datetime-local UI. r=Gijs
This only shows the date picker for now (matches Safari). Seems fine
since we don't enable the time picker by default.

Differential Revision: https://phabricator.services.mozilla.com/D113116

UltraBlame original commit: 6e763489ab1ee9a16cc6503b6eb664ecdca6679f

--- a/dom/html/test/forms/test_MozEditableElement_setUserInput.html
+++ b/dom/html/test/forms/test_MozEditableElement_setUserInput.html
@@ -1867,6 +1867,19 @@ type
 "
 time
 "
+|
+|
+test
+.
+type
+=
+=
+=
+"
+datetime
+-
+local
+"
 )
 {
 todo_is
@@ -3141,6 +3154,19 @@ type
 =
 "
 time
+"
+|
+|
+test
+.
+type
+=
+=
+=
+"
+datetime
+-
+local
 "
 )
 {
