Bug 1723799 - part2 : add test. r=padenot,webidl,smaug
Differential Revision: https://phabricator.services.mozilla.com/D121681

UltraBlame original commit: 5984d69367e20af1ff185229884bc6313eefd3fb

--- a/dom/media/test/chrome/test_accumulated_play_time.html
+++ b/dom/media/test/chrome/test_accumulated_play_time.html
@@ -137,6 +137,9 @@ VIDEO_HIDDEN_PLAY_TIME_PERCENTAGE
 -
 VIDEO_INFERRED_DECODE_SUSPEND_PERCENTAGE
 *
+-
+VIDEO_VISIBLE_PLAY_TIME_MS
+*
 /
 const
 histNames
@@ -159,6 +162,9 @@ VIDEO_HIDDEN_PLAY_TIME_PERCENTAGE
 "
 "
 VIDEO_INFERRED_DECODE_SUSPEND_PERCENTAGE
+"
+"
+VIDEO_VISIBLE_PLAY_TIME_MS
 "
 ]
 ;
@@ -331,15 +337,6 @@ invisiblePlayTime
 0
 )
 ;
-assertValueEqualTo
-(
-videoChrome
-"
-videoDecodeSuspendedTime
-"
-0
-)
-;
 info
 (
 start
@@ -380,6 +377,7 @@ moztotalplaytimestarted
 ]
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -436,6 +434,15 @@ videoChrome
 "
 totalPlayTime
 "
+)
+;
+assertValueEqualTo
+(
+videoChrome
+"
+totalPlayTime
+"
+0
 )
 ;
 info
@@ -496,11 +503,229 @@ again
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
 "
 totalPlayTime
+"
+)
+;
+await
+cleanUpMediaAndCheckTelemetry
+(
+video
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+testVisiblePlayTime
+(
+)
+{
+const
+video
+=
+document
+.
+createElement
+(
+'
+video
+'
+)
+;
+video
+.
+src
+=
+"
+gizmo
+.
+mp4
+"
+;
+document
+.
+body
+.
+appendChild
+(
+video
+)
+;
+info
+(
+all
+accumulated
+time
+should
+be
+zero
+)
+;
+const
+videoChrome
+=
+SpecialPowers
+.
+wrap
+(
+video
+)
+;
+await
+new
+Promise
+(
+r
+=
+>
+video
+.
+onloadeddata
+=
+r
+)
+;
+assertValueEqualTo
+(
+videoChrome
+"
+totalPlayTime
+"
+0
+)
+;
+assertValueEqualTo
+(
+videoChrome
+"
+visiblePlayTime
+"
+0
+)
+;
+assertValueEqualTo
+(
+videoChrome
+"
+invisiblePlayTime
+"
+0
+)
+;
+info
+(
+start
+accumulating
+play
+time
+after
+media
+starts
+)
+;
+video
+.
+autoplay
+=
+true
+;
+await
+Promise
+.
+all
+(
+[
+once
+(
+video
+"
+playing
+"
+)
+once
+(
+video
+"
+moztotalplaytimestarted
+"
+)
+]
+)
+;
+await
+assertValueConstantlyIncreases
+(
+videoChrome
+"
+totalPlayTime
+"
+)
+;
+await
+assertValueConstantlyIncreases
+(
+videoChrome
+"
+visiblePlayTime
+"
+)
+;
+assertValueKeptUnchanged
+(
+videoChrome
+"
+invisiblePlayTime
+"
+)
+;
+info
+(
+make
+video
+invisible
+)
+;
+document
+.
+body
+.
+removeChild
+(
+video
+)
+;
+await
+assertValueConstantlyIncreases
+(
+videoChrome
+"
+totalPlayTime
+"
+)
+;
+await
+assertValueConstantlyIncreases
+(
+videoChrome
+"
+invisiblePlayTime
+"
+)
+;
+assertValueKeptUnchanged
+(
+videoChrome
+"
+visiblePlayTime
 "
 )
 ;
@@ -750,6 +975,7 @@ playing
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -849,6 +1075,7 @@ again
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1159,6 +1386,7 @@ playing
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1211,6 +1439,7 @@ mozvideodecodesuspendedstarted
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1219,6 +1448,7 @@ totalPlayTime
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1227,6 +1457,7 @@ invisiblePlayTime
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1275,6 +1506,7 @@ mozvideodecodesuspendedpaused
 ]
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1417,6 +1649,7 @@ again
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -1627,6 +1860,7 @@ started
 "
 )
 ;
+await
 assertValueConstantlyIncreases
 (
 videoChrome
@@ -2550,6 +2784,7 @@ expectedValue
 )
 ;
 }
+async
 function
 assertValueConstantlyIncreases
 (
@@ -2571,12 +2806,38 @@ mediaChrome
 checkType
 ]
 ;
-ok
+/
+/
+Simply
+wait
+for
+a
+short
+while
+.
+await
+new
+Promise
 (
+r
+=
+>
+r
+(
+)
+)
+;
+const
+current
+=
 mediaChrome
 [
 checkType
 ]
+;
+ok
+(
+current
 >
 valueSnapshot
 {
@@ -2584,6 +2845,15 @@ checkType
 }
 keeps
 increasing
+(
+{
+current
+}
+>
+{
+valueSnapshot
+}
+)
 )
 ;
 }
@@ -2608,20 +2878,23 @@ mediaChrome
 checkType
 ]
 ;
-ok
+is
 (
 mediaChrome
 [
 checkType
 ]
-=
-=
 valueSnapshot
 {
 checkType
 }
 keeps
 unchanged
+(
+{
+valueSnapshot
+}
+)
 )
 ;
 }
