Bug 1706080 - [css-fonts] Implement 'font-synthesis: small-caps'.  r=jfkthame
Differential Revision: https://phabricator.services.mozilla.com/D114313

UltraBlame original commit: ccd03e2f466b4623583fa4ad711a7a56a493d96f

--- a/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-invalid.html
+++ b/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-invalid.html
@@ -25,8 +25,6 @@ title
 CSS
 Fonts
 Module
-Level
-3
 :
 parsing
 font
@@ -53,26 +51,20 @@ https
 :
 /
 /
-www
+drafts
 .
-w3
+csswg
 .
 org
-/
-TR
 /
 css
 -
 fonts
--
-3
 /
 #
 font
 -
 synthesis
--
-prop
 "
 >
 <
@@ -100,6 +92,11 @@ weight
 |
 |
 style
+|
+|
+small
+-
+caps
 ]
 '
 .
@@ -192,6 +189,62 @@ synthesis
 '
 none
 weight
+'
+)
+;
+test_invalid_value
+(
+'
+font
+-
+synthesis
+'
+'
+none
+style
+'
+)
+;
+test_invalid_value
+(
+'
+font
+-
+synthesis
+'
+'
+style
+none
+'
+)
+;
+test_invalid_value
+(
+'
+font
+-
+synthesis
+'
+'
+none
+small
+-
+caps
+'
+)
+;
+test_invalid_value
+(
+'
+font
+-
+synthesis
+'
+'
+small
+-
+caps
+none
 '
 )
 ;
