--- a/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-valid.html
+++ b/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-valid.html
@@ -25,8 +25,6 @@ title
 CSS
 Fonts
 Module
-Level
-3
 :
 parsing
 font
@@ -53,26 +51,20 @@ https
 :
 /
 /
-www
+drafts
 .
-w3
+csswg
 .
 org
-/
-TR
 /
 css
 -
 fonts
--
-3
 /
 #
 font
 -
 synthesis
--
-prop
 "
 >
 <
@@ -100,6 +92,11 @@ weight
 |
 |
 style
+|
+|
+small
+-
+caps
 ]
 '
 .
@@ -214,12 +211,137 @@ font
 synthesis
 '
 '
+small
+-
+caps
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
 style
 weight
 '
 '
 weight
 style
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
+small
+-
+caps
+weight
+'
+'
+weight
+small
+-
+caps
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
+small
+-
+caps
+style
+'
+'
+style
+small
+-
+caps
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
+style
+weight
+small
+-
+caps
+'
+'
+weight
+style
+small
+-
+caps
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
+style
+small
+-
+caps
+weight
+'
+'
+weight
+style
+small
+-
+caps
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+synthesis
+'
+'
+small
+-
+caps
+style
+weight
+'
+'
+weight
+style
+small
+-
+caps
 '
 )
 ;
