--- a/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-computed.html
+++ b/testing/web-platform/tests/css/css-fonts/parsing/font-synthesis-computed.html
@@ -25,8 +25,6 @@ title
 CSS
 Fonts
 Module
-Level
-3
 :
 getComputedStyle
 (
@@ -51,26 +49,20 @@ https
 :
 /
 /
-www
+drafts
 .
-w3
+csswg
 .
 org
-/
-TR
 /
 css
 -
 fonts
--
-3
 /
 #
 font
 -
 synthesis
--
-prop
 "
 >
 <
@@ -215,8 +207,68 @@ font
 synthesis
 '
 '
+small
+-
+caps
+'
+)
+;
+test_computed_value
+(
+'
+font
+-
+synthesis
+'
+'
+style
+small
+-
+caps
+'
+)
+;
+test_computed_value
+(
+'
+font
+-
+synthesis
+'
+'
+weight
+small
+-
+caps
+'
+)
+;
+test_computed_value
+(
+'
+font
+-
+synthesis
+'
+'
 weight
 style
+'
+)
+;
+test_computed_value
+(
+'
+font
+-
+synthesis
+'
+'
+weight
+style
+small
+-
+caps
 '
 )
 ;
